# BeePr

./: .clang-format  .gitignore  BeePr.pro  CMakeLists.txt  readme.md
android/: AndroidManifest.xml
qml/: BeePrInterval.qml  BeePrSlider.qml  main.qml  qml.qrc
res/: res.qrc
src/: main.cpp  timerthread.cpp  timerthread.h
